# airlab

./: ASSETS-EULA  LICENSE  NOTICE  README.md
.github/workflows/: firmware.yml
alctl/: go.mod  main.go
docs/: bundle.md  config.md  screens.md
firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  naos.json  partitions.csv
firmware/lib/: CMakeLists.txt  accel.c  buttons.c  buttons.h  buzzer.c  clock.c  clock_tools.c  core.c  epd.c  internal.h  led.c  power.c  sample.c  sensor.c  sensor_hal.c  sensor_hal.h  storage.c  store.c  touch.c  ulp.c
firmware/lib/al/: accel.h  buttons.h  buzzer.h  clock.h  core.h  epd.h  led.h  power.h  sample.h  sensor.h  storage.h  store.h  touch.h
firmware/lib/ulp/: main.c
firmware/src/: acc.c  acc.h  btn.c  cap.c  com.c  dat.c  dat.h  dev.c  dev.h  eng.c  eng.h  eng_bundle.c  eng_bundle.h  eng_config.c  eng_config.h  eng_exec.c  eng_exec.h  eng_settings.c  eng_settings.h  epd.c  epd.h  fnt.c  gfx.c  gfx.h  gui.c  gui.h  hmi.c  hmi.h  img.c  img.h  led.c  lvx.c  lvx.h  main.c  pwr.c  pwr.h  rec.c  rec.h  rtc.c  rtc.h  (+9 more)
firmware/test/: dat.c
plugins/: .gitignore  Makefile  README.md  al.h
plugins/adc/: alp.yml
plugins/config/: alp.yml  main.c
plugins/data/: alp.yml  main.c
plugins/gfx/: alp.yml
plugins/gpio/: alp.yml  main.c
plugins/hello/: alp.yml  main.c
plugins/http/: alp.yml
plugins/i2c/: alp.yml  main.c
plugins/info/: alp.yml  main.c
plugins/screen/: alp.yml  main.c
plugins/sen55/: alp.yml  main.c
plugins/servo/: alp.yml
plugins/settings/: alp.yml  main.c
plugins/sprite/: alp.yml  main.c
plugins/weather/: alp.yml  main.c
tools/: Makefile  README.md  go.mod  go.sum
tools/airlab/: capture.go  capture_animate.go  capture_convert.go  files.go  files_transfer.go  main.go  plugin.go  plugin_analyze.go  plugin_bundle.go  plugin_config.go  plugin_launch.go  plugin_monitor.go  plugin_upload.go  screens.go  screens_manage.go
tools/alp/: bundle.go  bundle_test.go  config.go  config_test.go  manifest.go  settings.go  settings_test.go  sprite.go  sprite_test.go
tools/alpctl/: bundle.go
